Completed functionality of table resize

--- a/src/scss/table.scss
+++ b/src/scss/table.scss
@@ -16,6 +16,7 @@
       height: $row-height;
     }
     &-column {
+      position: relative;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -26,6 +27,21 @@
       border: 1px solid $border-color;
       border-left: none;
       border-top: none;
+      &-resize {
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        width: 4px;
+        background-color: $primary-color;
+        opacity: 0;
+        z-index: 1000;
+        &:hover {
+          cursor: col-resize;
+          opacity: 1 !important;
+          transition: all 0.5s;
+        }
+      }
     }
     &-cell {
       min-width: 40px;
@@ -39,13 +55,14 @@
       color: #111;
       &-selected {
         border: none;
-        outline: 2px solid #3c74ff;
+        outline: 2px solid $primary-color;
         z-index: 2;
       }
     }
   }
   &__row {
     &-info {
+      position: relative;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -54,6 +71,22 @@
       border: 1px solid $border-color;
       background-color: #f8f9fa;
       border-top: none;
+    }
+    &-resize {
+      position: absolute;
+      right: 0;
+      left: 0;
+      bottom: 0;
+      height: 4px;
+      width: 100%;
+      background-color: $primary-color;
+      opacity: 0;
+      z-index: 1000;
+      &:hover {
+        cursor: row-resize;
+        opacity: 1 !important;
+        transition: all 0.5s;
+      }
     }
     &-data {
       display: flex;
