--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -6,6 +6,7 @@
 @import 'formula.scss';
 @import 'table.scss';
 @import 'dashboard.scss';
+@import 'loader.scss';
 
 * {
   margin: 0;
@@ -23,4 +24,11 @@ body {
   color: #888;
   height: 100%;
   max-width: 100%;
+}
+
+.info {
+  text-align: center;
+  font-size: 1.2rem;
+  margin-top: 15px;
+  font-weight: bold;
 }
